Add background-color on class container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Title</title>
 </head>
 <body>
-<div class="container">
+<div class="container bqColLt">
     <div class="wrap margBottom10">
         <div class="wrapper h200 w100 brdr br-5 margLft10 margTop bqColLt">
             <div class="h40 w90 bqColDeep margTop10 br-5"></div>
@@ -76,6 +76,6 @@
     </div>
 </div>
 
-<!--<img src="./image/cw4-2.jfif" alt="">-->
+<img src="./image/cw4-2.jfif" alt="">
 </body>
 </html>
