--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
             </div>
         </div>
     </div>
+    <div class="wrap margTop10 margBottom10">
+        <div class="h120 w170 bqColDeep"></div>
+        <div class="h120 w170 bgColFist margLft10"></div>
+    </div>
 </div>
 
-<img src="./image/cw4-2.jfif" alt="">
+<!--<img src="./image/cw4-2.jfif" alt="">-->
 </body>
 </html>
